# Charge

./: .env  .env.local  .gitattributes  .gitignore  PROFESSIONAL_REVIEW.md  README.md  check-sfu-config.ps1  check-sfu-config.sh  check-websocket.sh  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240705_01_create_initial_tables.py  20241026_02_add_hashed_password.py  20241105_03_extend_chat_features.py  20241112_04_add_message_receipts.py  20241118_05_expand_messages_for_threads.py  20241121_06_extend_user_profile_and_dm.py  20241128_07_add_channel_positions.py  20241130_08_add_channel_permission_overwrites.py  20241202_09_expand_channel_types.py  20241210_10_expand_direct_conversations.py  20241215_11_add_pinned_messages.py  20241220_12_add_custom_roles.py  20241221_13_extend_channel_settings.py  20241221_14_add_announcement_cross_posts.py  20241221_15_add_forum_channels.py  20241221_16_add_event_channels.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: auth.py  channels.py  config.py  constants.py  deps.py  dm.py  invites.py  messages.py  metrics.py  profile.py  roles.py  rooms.py  routes.py  voice.py  ws.py
backend/app/core/: __init__.py  (+3 more)
backend/config/: __init__.py  settings.py
backend/tests/: conftest.py  test_api_integration.py  test_auth_unit.py  test_channel_permissions.py  test_channels_features.py  test_config_endpoint.py  test_realtime_publish.py  test_realtime_transport_recovery.py  test_rooms_unit.py  test_schemas.py  test_voice_signaling.py  test_ws_keepalive.py
(+227 files in other folders)
