[tool.poetry]
name = "charge-backend"
version = "0.1.0"
description = "Backend service for Charge monorepo"
authors = ["Charge Team <team@example.com>"]
packages = [
    { include = "app" },
    { include = "charge", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
PyJWT = "^2.8.0"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"
pydantic-settings = "^2.2.1"

[tool.poetry.group.realtime]
optional = true

[tool.poetry.group.realtime.dependencies]
redis = "^5.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"
black = "^24.4.2"
ruff = "^0.5.0"
websockets = "^15.0.1"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008", "E402", "E501", "I001"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
